fix(post-layout): code fence will make line breaks instead of overflow and the title will break the layout

--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -43,7 +43,6 @@ pre {
 }
 
 pre code, .prose pre code {
-  white-space: pre-wrap;
   overflow-wrap: anywhere;
   max-width: 100%;
   display: block;
